# bazartech-back

./: .flake8  .pre-commit-config.yaml  Procfile  google-credentials.json  manage.py  pyproject.toml  setup.cfg
bazartech/: asgi.py  settings.py  urls.py  wsgi.py
bazartech/apps/authentication/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
bazartech/apps/authentication/migrations/: 0001_initial.py  0002_alter_user_profile_picture.py  0003_user_registered_at.py  0004_alter_user_profile_picture.py  0005_auto_20220506_2236.py  0006_alter_user_is_active.py  0007_alter_user_name.py  0008_alter_user_phone_number.py
bazartech/apps/common/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
bazartech/apps/common/migrations/: 0001_initial.py  0002_auto_20220504_1028.py  0003_auto_20220506_2233.py  estados.json  municipios.json
bazartech/apps/notifications/: urls.py  views.py
bazartech/apps/store/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
bazartech/apps/store/migrations/: 0001_initial.py  0002_productimage.py  0003_alter_productimage_product.py  0004_auto_20220505_0009.py  0005_alter_product_status.py  0006_auto_20220506_2233.py  0007_product_favorite.py  0008_alter_product_favorite.py
bazartech/management/commands/: makemessages.py
bazartech/translation/rest_framework/locale/pt_BR/LC_MESSAGES/: django.po
